# xframes-java

./: .gitignore  .gitmodules  README.md  build.gradle
native/: CMakeLists.txt  callbacks-handler.cpp  callbacks-handler.h  main.c  xframes-runner.cpp  xframes-runner.h  xframes-wrapper.cpp
src/dev/xframes/: MyCallbackHandler.java  XFramesWrapper.java
src/main/java/dev/xframes/: AllCallbacks.java  MyCallbackHandler.java  XFramesWrapper.java
